--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="js/script.js" defer></script>
   </head>
   <body>
-    <h1>Nada para ver aqui</h1>
+    <h1>shh..</h1>
     <h1>&circledcirc;<sub>&smile;</sub>&circledcirc;</h1>
   </body>
 </html>
